IF   (DYNAMIC_OSGJUNIPER)
    ADD_DEFINITIONS(-DOSGJUNIPER_LIBRARY)
ELSE (DYNAMIC_OSGJUNIPER)
    ADD_DEFINITIONS(-DOSGJUNIPER_LIBRARY_STATIC)
ENDIF(DYNAMIC_OSGJUNIPER)

OPTION(CURL_IS_STATIC "on if curl is a static lib " ON)
MARK_AS_ADVANCED(CURL_IS_STATIC)

IF(WIN32)
    SET(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /NODEFAULTLIB:MSVCRT")
    IF(CURL_IS_STATIC)
        ADD_DEFINITIONS(-DCURL_STATICLIB)
        SET(TARGET_EXTERNAL_LIBRARIES ws2_32 winmm wldap32)
    ENDIF(CURL_IS_STATIC)
ENDIF(WIN32)

SET(LIB_NAME osgJuniper)

SET(HEADER_PATH ${OSGJUNIPER_SOURCE_DIR}/include/${LIB_NAME})
SET(LIB_PUBLIC_HEADERS
    Common
    IBR
    IBRCameraNode
    IBRManipulator
	NodeSequence
    Utils
    KdTree
    Octree
    PCap
    Point
    PointCloud
    SPTNode
    StreamingNode
    Velodyne
)

ADD_LIBRARY(${LIB_NAME} SHARED
#    ${OSGJUNIPER_USER_DEFINED_DYNAMIC_OR_STATIC}
    ${LIB_PUBLIC_HEADERS}
    IBR.cpp
    IBRCameraNode.cpp
    IBRManipulator.cpp
	NodeSequence.cpp
    Utils.cpp
    KdTree.cpp
    Octree.cpp
    PCap.cpp
    Point.cpp
    PointCloud.cpp
    SPTNode.cpp
    StreamingNode.cpp
    Velodyne.cpp
)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR} ${OSGEARTH_INCLUDE_DIR} )

IF (WIN32)
  LINK_EXTERNAL(${LIB_NAME} ${TARGET_EXTERNAL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBRARY} )
ELSE(WIN32)
  LINK_EXTERNAL(${LIB_NAME} ${TARGET_EXTERNAL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBRARY} )
ENDIF(WIN32)

LINK_WITH_VARIABLES(${LIB_NAME} OSG_LIBRARY OSGUTIL_LIBRARY OSGSIM_LIBRARY OSGTERRAIN_LIBRARY OSGDB_LIBRARY OSGFX_LIBRARY OSGVIEWER_LIBRARY OSGTEXT_LIBRARY OSGGA_LIBRARY OPENTHREADS_LIBRARY OSGEARTH_LIBRARY)
LINK_CORELIB_DEFAULT(${LIB_NAME} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBRARY})

INCLUDE(ModuleInstall OPTIONAL)
