IF   (DYNAMIC_OSGJUNIPER)
    ADD_DEFINITIONS(-DOSGJUNIPER_LIBRARY)
ELSE (DYNAMIC_OSGJUNIPER)
    ADD_DEFINITIONS(-DOSGJUNIPER_LIBRARY_STATIC)
ENDIF(DYNAMIC_OSGJUNIPER)

OPTION(CURL_IS_STATIC "on if curl is a static lib " ON)
MARK_AS_ADVANCED(CURL_IS_STATIC)

IF(WIN32)
    SET(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /NODEFAULTLIB:MSVCRT")
    IF(CURL_IS_STATIC)
        ADD_DEFINITIONS(-DCURL_STATICLIB)
        SET(TARGET_EXTERNAL_LIBRARIES ws2_32 winmm wldap32)
    ENDIF(CURL_IS_STATIC)
ENDIF(WIN32)

# Disable min/max macros
ADD_DEFINITIONS(-DNOMINMAX)

SET(LIB_NAME osgJuniper)

SET(HEADER_PATH ${OSGJUNIPER_SOURCE_DIR}/include/${LIB_NAME})
SET(LIB_PUBLIC_HEADERS
    Common
    IBR
    IBRCameraNode
    IBRManipulator
	NodeSequence
    Utils
    LASTile
    Octree
    PCap
    PDALUtils
    Point
    PointReaderWriter
    PointCloud
    PointCloudTools
    StreamingNode
    Velodyne
)

ADD_LIBRARY(${LIB_NAME} SHARED
#    ${OSGJUNIPER_USER_DEFINED_DYNAMIC_OR_STATIC}
    ${LIB_PUBLIC_HEADERS}
    IBR.cpp
    IBRCameraNode.cpp
    IBRManipulator.cpp
	NodeSequence.cpp
    Utils.cpp
    LASTile.cpp
    Octree.cpp
    PCap.cpp
    PDALUtils.cpp
    Point.cpp
    PointReaderWriter.cpp
    PointCloud.cpp
    PointCloudTools.cpp
    StreamingNode.cpp
    Velodyne.cpp
)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR} ${OSGEARTH_INCLUDE_DIR} ${PDAL_INCLUDE_DIRS})

IF (WIN32)
  LINK_EXTERNAL(${LIB_NAME} ${TARGET_EXTERNAL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBRARY} )
ELSE(WIN32)
  LINK_EXTERNAL(${LIB_NAME} ${TARGET_EXTERNAL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBRARY} )
ENDIF(WIN32)

LINK_WITH_VARIABLES(${LIB_NAME} OSG_LIBRARY OSGUTIL_LIBRARY OSGSIM_LIBRARY OSGTERRAIN_LIBRARY OSGDB_LIBRARY OSGFX_LIBRARY OSGVIEWER_LIBRARY OSGTEXT_LIBRARY OSGGA_LIBRARY OPENTHREADS_LIBRARY OSGEARTH_LIBRARY PDAL_LIBRARIES)
LINK_CORELIB_DEFAULT(${LIB_NAME} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBRARY})

INCLUDE(ModuleInstall OPTIONAL)
