IF   (DYNAMIC_OSGJUNIPER)
    ADD_DEFINITIONS(-DOSGJUNIPERMAP_LIBRARY)
ELSE (DYNAMIC_OSGJUNIPER)
    ADD_DEFINITIONS(-DOSGJUNIPERMAP_LIBRARY_STATIC)
ENDIF(DYNAMIC_OSGJUNIPER)

OPTION(CURL_IS_STATIC "on if curl is a static lib " ON)
MARK_AS_ADVANCED(CURL_IS_STATIC)

IF(WIN32)
    SET(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /NODEFAULTLIB:MSVCRT")
    IF(CURL_IS_STATIC)
        ADD_DEFINITIONS(-DCURL_STATICLIB)
        SET(TARGET_EXTERNAL_LIBRARIES ws2_32 winmm wldap32)
    ENDIF(CURL_IS_STATIC)
ENDIF(WIN32)

SET(LIB_NAME osgJuniperMap)

SET(HEADER_PATH ${OSGJUNIPER_SOURCE_DIR}/include/${LIB_NAME})
SET(LIB_PUBLIC_HEADERS
    Articulation
    BitmapPrimitive
	BoxPrimitive
    Common
	EllipsoidPrimitive	   
    Export
	ImageOverlayPrimitive	
	Location
	MapContext
    ModelPrimitive
    PolylinePrimitive
    Primitive	
	RangeRingPrimitive
	Registry
	ScreenBitmapPrimitive
	ScreenMeshPrimitive
	ScreenPolylinePrimitive
	ScreenTextPrimitive
    TextPrimitive
    MeshPrimitive
)

ADD_LIBRARY(${LIB_NAME} SHARED
#    ${OSGJUNIPER_USER_DEFINED_DYNAMIC_OR_STATIC}
    ${LIB_PUBLIC_HEADERS}
	Articulation.cpp
    BitmapPrimitive.cpp
	BoxPrimitive.cpp
	EllipsoidPrimitive.cpp	
	ImageOverlayPrimitive.cpp
	Location.cpp
	MapContext.cpp
    ModelPrimitive.cpp
    PolylinePrimitive.cpp
    Primitive.cpp	
	RangeRingPrimitive.cpp
	Registry.cpp
	ScreenBitmapPrimitive.cpp
	ScreenTextPrimitive.cpp
	ScreenPolylinePrimitive.cpp
	ScreenMeshPrimitive.cpp
    TextPrimitive.cpp
	MeshPrimitive.cpp
)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR} ${OSGJUNIPER_INCLUDE_DIR} ${OSGEARTH_INCLUDE_DIR})

IF (WIN32)
  LINK_EXTERNAL(${LIB_NAME} ${TARGET_EXTERNAL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBRARY} )
ELSE(WIN32)
  LINK_EXTERNAL(${LIB_NAME} ${TARGET_EXTERNAL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBRARY} )
ENDIF(WIN32)

LINK_INTERNAL(${LIB_NAME}
osgJuniper
)


LINK_WITH_VARIABLES(${LIB_NAME} OSG_LIBRARY OSGUTIL_LIBRARY OSGSIM_LIBRARY OSGTERRAIN_LIBRARY OSGDB_LIBRARY OSGFX_LIBRARY OSGVIEWER_LIBRARY OSGTEXT_LIBRARY OSGGA_LIBRARY OPENTHREADS_LIBRARY OSGEARTH_LIBRARY OSGEARTHANNOTATION_LIBRARY OSGEARTHUTIL_LIBRARY OSGEARTHFEATURES_LIBRARY OSGEARTHSYMBOLOGY_LIBRARY)
LINK_CORELIB_DEFAULT(${LIB_NAME} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBRARY})

INCLUDE(ModuleInstall OPTIONAL)
